[package]
name = "eversion"
version = "0.1.0"
edition = "2021"

[dependencies]
hexasphere = "15.0.0"
three-d = { version = "0.17.0", features = ["egui-gui"] }
three-d-asset = { version = "0.7.0", features = ["hdr"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1"
console_error_panic_hook = "0.1"
log = "0.4.22"
wasm-bindgen = "0.2.95"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "eversion"

